--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.npz filter=lfs diff=lfs merge=lfs -text
 *.parquet filter=lfs diff=lfs merge=lfs -text
 *.jsonl filter=lfs diff=lfs merge=lfs -text
+* text=auto eol=lf
